--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -176,3 +176,6 @@ $operate-links: 'blue', 'primary', 'orangered';
 
 // 
 $btn-account-deletion: #E3966B;
+
+// 
+$list-style-type: 'decimal', 'cjk-ideographic', 'disc', 'lower-latin', 'lower-roman';
