--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -18,6 +18,7 @@
 @import 'form';
 @import 'button';
 @import '_table.scss';
+@import '_list.scss';
 @import '_status.scss';
 @import 'utilities/api';
 @import 'modal';
