--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,10 +16,12 @@
 @import 'headings';
 @import 'background';
 @import 'form';
+@import 'border';
 @import 'button';
 @import 'table';
 @import 'list';
 @import 'status';
+@import 'tags';
 @import 'utilities/api';
 @import 'modal';
 @import 'main';
