--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,34 +4,13 @@
   padding: 60px 0;
 }
 
-.border-bottom {
-  border-bottom: 1px solid var(--gray-200);
-}
-
-.rounded-0 {
-  border-radius: 0 !important;
-}
-
-.rounded-1 {
-  border-radius: 10px !important;
-}
-
 .base-box-shadow {
   -webkit-box-shadow: var(--base-box-shadow) !important;
           box-shadow: var(--base-box-shadow) !important;
 }
 
-.rotate-90 {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
 .small {
   font-size: 0.75rem;
-}
-
-.border {
-  border: 1px solid var(--block);
 }
 
 .overflow-hidden {
@@ -41,6 +20,12 @@
 .prompt-text {
   font-size: 0.875rem;
   color: var(--gray-400);
+}
+
+.img-fluid {
+  width: auto !important;
+  max-width: 100% !important;
+  height: auto !important;
 }
 
 :root {
@@ -3702,7 +3687,10 @@ p {
   text-decoration: none;
 }
 .link-status-primary:hover {
-  color: var(--primary);
+  color: #78b2f6;
+}
+.link-status-primary:active {
+  color: #0a4b98;
 }
 
 .link-warning {
@@ -4119,6 +4107,31 @@ form .field.shake {
     padding: 0;
   }
 }
+.border {
+  border: 1px solid var(--block);
+}
+
+.border-top {
+  border-top: 1px solid var(--gray-200);
+}
+
+.border-bottom {
+  border-bottom: 1px solid var(--gray-200);
+}
+
+.rounded-0 {
+  border-radius: 0 !important;
+}
+
+.rounded-1 {
+  border-radius: 10px !important;
+}
+
+.rotate-90 {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
 .btn-secondary, .btn-danger, .btn-primary {
   padding: 12px 20px;
   border-radius: 2px;
@@ -4194,7 +4207,7 @@ form .field.shake {
 
 .btn-secondary {
   color: var(--gray-800);
-  background-color: transparent;
+  background-color: var(--white);
   border: 1px solid var(--gray-200);
 }
 .btn-secondary:hover {
@@ -4342,6 +4355,66 @@ form .field.shake {
 }
 .status.status-gray {
   background-color: #AAAAAA;
+}
+
+.tag-primary {
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 4px 12px;
+  background-color: #187BF0;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  color: var(--white);
+  font-size: 1rem;
+}
+.tag-primary:hover {
+  background-color: #78b2f6;
+}
+
+.tag-safe {
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 4px 12px;
+  background-color: #00E480;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  color: var(--white);
+  font-size: 1rem;
+}
+.tag-safe:hover {
+  background-color: #4bffb0;
+}
+
+.tag-secondary {
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 4px 12px;
+  background-color: #FFB415;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  color: var(--white);
+  font-size: 1rem;
+}
+.tag-secondary:hover {
+  background-color: #ffd57b;
+}
+
+.tag-gray {
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 4px 12px;
+  background-color: #AAAAAA;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  color: var(--white);
+  font-size: 1rem;
+}
+.tag-gray:hover {
+  background-color: #dddddd;
 }
 
 .text-left {
@@ -6028,7 +6101,10 @@ form .field.shake {
 }
 .product-card .product-card-body {
   background-color: var(--white);
-  padding: 26px 32px;
+  padding-top: 26px;
+  padding-bottom: 26px;
+  padding-left: 32px;
+  padding-right: 32px;
   -webkit-box-shadow: var(--base-box-shadow);
           box-shadow: var(--base-box-shadow);
 }
@@ -6037,6 +6113,7 @@ form .field.shake {
 }
 .product-card .product-card-body dl > dt {
   font-weight: 700;
+  white-space: nowrap;
 }
 .product-card .product-card-body .product-card-body-number {
   font-size: 1.25rem;
@@ -6045,13 +6122,20 @@ form .field.shake {
   width: 56px;
   height: 56px;
   background-color: var(--white);
-  border: 1px solid var(--gray-100);
+  border: 1px solid var(--gray-200);
   color: var(--gray-400);
 }
+.product-card .product-card-body .product-card-body-number button:disabled {
+  background-color: var(--gray-100);
+}
 .product-card .product-card-body .product-card-body-number .product-number {
-  border: 1px solid var(--gray-100);
   margin-left: 8px;
   margin-right: 8px;
+}
+.product-card .product-card-body .product-card-body-number .product-number input {
+  width: 100%;
+  height: 56px;
+  border: 1px solid var(--gray-200);
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -6079,7 +6163,6 @@ form .field.shake {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding: 0 0;
-  margin-bottom: 1rem;
   list-style: none;
 }
 .breadcrumb .breadcrumb-item {
@@ -6087,12 +6170,12 @@ form .field.shake {
   padding-right: 8px;
 }
 .breadcrumb .breadcrumb-item a {
-  color: var(--gray-500);
+  color: var(--gray-800);
   -webkit-transition: var(--base-transition);
   transition: var(--base-transition);
 }
 .breadcrumb .breadcrumb-item a:hover {
-  color: var(--white);
+  color: var(--gray-800);
 }
 .breadcrumb .breadcrumb-item.active {
   color: var(--primary-200);
@@ -6341,4 +6424,128 @@ form .field.shake {
     margin-top: 15px;
     width: 100%;
   }
+}
+.support {
+  padding-top: 60px;
+}
+
+.support-header {
+  background-color: var(--secondary-300);
+  padding-top: 24px;
+  padding-bottom: 32px;
+  position: relative;
+  overflow: hidden;
+}
+.support-header::before {
+  content: "";
+  display: block;
+  width: 322px;
+  height: 322px;
+  border-radius: 50%;
+  opacity: 0.5;
+  background-color: var(--alarm);
+  -webkit-filter: blur(137px);
+          filter: blur(137px);
+  position: absolute;
+  bottom: -10px;
+  right: -30px;
+}
+
+.support-search {
+  position: relative;
+}
+.support-search > i {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+#search {
+  width: 100%;
+  font-size: 1rem;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 36px;
+}
+
+.support-block {
+  border-radius: 18px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.support-block.moc {
+  background-color: var(--primary);
+}
+.support-block.sivas {
+  background-color: #ED7359;
+}
+.support-block.heis {
+  background-color: #5CB74D;
+}
+
+.support-content {
+  padding-top: 32px;
+}
+.support-content article {
+  font-size: 1rem;
+}
+.support-content article > ol {
+  padding-left: 16px;
+}
+
+.support-heading-list {
+  list-style: none;
+}
+.support-heading-list > li {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.support-heading-list > li > a {
+  color: #187BF0;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+.support-forum-content > .date {
+  color: var(--gray-500);
+  font-size: 1rem;
+}
+.support-forum-content > .body {
+  color: var(--gray-800);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  font-size: 1rem;
+}
+
+.question-block {
+  background-color: var(--gray-50);
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.support-content-bg {
+  background-color: var(--secondary-300);
+  padding-top: 60px;
+  position: relative;
+  overflow: hidden;
+}
+.support-content-bg::before {
+  content: "";
+  display: block;
+  width: 322px;
+  height: 322px;
+  border-radius: 50%;
+  opacity: 0.5;
+  background-color: var(--alarm);
+  -webkit-filter: blur(97px);
+          filter: blur(97px);
+  position: absolute;
+  top: 40px;
+  right: -20px;
 }/*# sourceMappingURL=style.css.map */
