--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -2,7 +2,12 @@
     height: 100%;
     .product-card-body {
         background-color: var(--white);
-        padding: 26px 32px;
+        padding: {
+            top: 26px;
+            bottom: 26px;
+            left: 32px;
+            right: 32px;
+        }
         box-shadow: var(--base-box-shadow);
         > h3 {
             height: 72px;
@@ -10,6 +15,7 @@
         dl {
             > dt {
                 font-weight: $font-weight-bold;
+                white-space: nowrap;
             }
         }
         .product-card-body-number {
@@ -18,19 +24,26 @@
                 width: 56px;
                 height: 56px;
                 background-color: var(--white);
-                border: 1px solid var(--gray-100);
+                border: 1px solid var(--gray-200);
                 color: var(--gray-400);
+                &:disabled {
+                    background-color: var(--gray-100);
+                }
             }
             .product-number {
-                border: 1px solid var(--gray-100);
                 margin: {
                     left: 8px;
                     right: 8px;
-                };
-                padding: {
-                    left: 20px;
-                    right: 20px;
-                };
+                }
+                input {
+                    width: 100%;
+                    height: 56px;
+                    border: 1px solid var(--gray-200);
+                    padding: {
+                        left: 20px;
+                        right: 20px;
+                    };
+                }
             }
         }
     }
